[package]
name = "tile-gen"
authors = ["GlennFolker"]
description = """
A simple tool to generate bitmasked sprites
Inputs must point to valid .png files whose dimensions are squares divisible by 4

There are 2 formats of outputs:
- Singular; simply concatenated by `-tiled`
- Separate; each processed tiles are stored in a folder"""
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", default-features = false, features = ["std", "derive", "error-context", "help", "usage"] }
hashbrown = "0.14"
image = { version = "0.24", default-features = false, features = ["png"] }
rayon = "1.6"
thiserror = "1.0"
